--- a/src/styles/Upload/Upload.module.css
+++ b/src/styles/Upload/Upload.module.css
@@ -1,292 +1,324 @@
 .mainUpload {
-    position: absolute;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(248, 248, 248);
-    overflow: hidden;
+  position: absolute;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(248, 248, 248);
+  overflow: hidden;
 }
 
 .uploadContainer {
-    background-color: rgb(248, 248, 248);
-    width: 1100px;
-    height: 100%;
-    overflow-y: hidden;
-    margin: 0px auto;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    background-color: rgb(248, 248, 248);
-    top: 60px;
-    position: relative;
-    bottom: 0px;
+  background-color: rgb(248, 248, 248);
+  width: 1100px;
+  height: 100%;
+  overflow-y: hidden;
+  margin: 0px auto;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  background-color: rgb(248, 248, 248);
+  top: 60px;
+  position: relative;
+  bottom: 0px;
 }
 
 .uploadWrapper {
-    width: 1100px;
-    height: 100vh;
-    box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 8px;
-    border-radius: 8px;
-    background-color: rgb(255, 255, 255);
-    padding: 24px 40px;
-    z-index: 99;
+  width: 1100px;
+  height: 100vh;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 8px;
+  border-radius: 8px;
+  background-color: rgb(255, 255, 255);
+  padding: 24px 40px;
+  z-index: 99;
 }
 
 .uploadTitleContainer {
-    margin-left: -5px;
-    font-family: 'Bebas Neue';
-    letter-spacing: 0.75px;
+  margin-left: -5px;
+  font-family: "Bebas Neue";
+  letter-spacing: 0.75px;
 }
 
-.uploadTitleContainer>h1 {
-    margin-top: 12px;
-    font-size: 26px;
+.uploadTitleContainer > h1 {
+  margin-top: 12px;
+  font-size: 26px;
 }
 
-.uploadTitleContainer>h2 {
-    margin-top: 12px;
-    font-size: 20px;
-    color: rgba(22, 24, 35, 0.5);
+.uploadTitleContainer > h2 {
+  margin-top: 12px;
+  font-size: 20px;
+  color: rgba(22, 24, 35, 0.5);
 }
 
 .uploadBodyContainer {
-    display: flex;
-    margin-top: 1.25rem;
-    margin-bottom: 8rem;
-    justify-content: space-between;
+  display: flex;
+  margin-top: 1.25rem;
+  margin-bottom: 8rem;
+  justify-content: space-between;
 }
 
 .uploadMeta {
-    width: 100%;
+  width: 100%;
 }
 
 .uploadPreviewWrapper {
-    margin: 0 0 0 4rem;
+  margin: 0 0 0 4rem;
 }
 
-.uploadCaption>h3,
-.uploadAccessControls>h3,
-.uploadAllowanceControls>h3 {
-    font-family: 'Oswald', sans-serif;
-    font-weight: 400;
-    margin: 14px 0;
+.uploadCaption > h3,
+.uploadAccessControls > h3,
+.uploadAllowanceControls > h3 {
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  margin: 14px 0;
 }
 
-.uploadCaption>input {
-    min-height: 46px;
-    width: 100%;
-    position: relative;
-    border: 1px solid rgba(22, 24, 35, 0.12);
-    border-radius: 4px;
-    outline: none;
-    padding: 8px;
-    margin-bottom: 12px;
+.uploadCaption > input {
+  min-height: 46px;
+  width: 100%;
+  position: relative;
+  border: 1px solid rgba(22, 24, 35, 0.12);
+  border-radius: 4px;
+  outline: none;
+  padding: 8px;
+  margin-bottom: 12px;
 }
 
-.uploadAccessControls>select {
-    width: 300px;
-    height: 36px;
-    border: 1px solid rgba(22, 24, 35, 0.12);
-    background: rgb(255, 255, 255);
-    border-radius: 4px;
-    padding: 7px 12px;
-    box-sizing: border-box;
-    display: inline-flex;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    align-items: center;
-    cursor: pointer;
-    margin-bottom: 12px;
+.uploadAccessControls > select {
+  width: 300px;
+  height: 36px;
+  border: 1px solid rgba(22, 24, 35, 0.12);
+  background: rgb(255, 255, 255);
+  border-radius: 4px;
+  padding: 7px 12px;
+  box-sizing: border-box;
+  display: inline-flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  cursor: pointer;
+  margin-bottom: 12px;
 }
 
 .uploadCheckbox {
-    display: flex;
-    align-items: center;
-    margin-bottom: 12px;
-    font-family: 'Oswald', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    flex-flow: row nowrap;
-    -webkit-box-pack: start;
-    justify-content: flex-start;
-    align-items: flex-start;
-    min-height: 24px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  flex-flow: row nowrap;
+  -webkit-box-pack: start;
+  justify-content: flex-start;
+  align-items: flex-start;
+  min-height: 24px;
 }
 
-.uploadCheckbox>input {
-    margin-right: 10px;
-}
-
-.uploadSubmitControls {
-    display: flex;
+.uploadCheckbox > input {
+  margin-right: 10px;
 }
 
 .uploadSubmitControls {
-    margin-top: 2rem;
+  display: flex;
 }
 
-.uploadSubmitControls>button {
-    text-decoration: none;
-    font-family: 'Bebas Neue';
-    font-size: 18px;
-    position: relative;
-    height: 44px;
-    color: rgba(22, 24, 35, 1);
-    width: 164px;
-    padding: 0 16px;
-    border: 1px solid rgba(22, 24, 35, 0.12);
-    border-radius: 2px;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    background: rgba(255, 255, 255, 1);
-    cursor: pointer;
-    letter-spacing: 0.25px;
+.uploadSubmitControls {
+  margin-top: 2rem;
 }
 
-.uploadSubmitControls>button:hover {
-    background: rgba(244, 244, 244, 0.726);
+.uploadSubmitControls > button {
+  text-decoration: none;
+  font-family: "Bebas Neue";
+  font-size: 18px;
+  position: relative;
+  height: 44px;
+  color: rgba(22, 24, 35, 1);
+  width: 164px;
+  padding: 0 16px;
+  border: 1px solid rgba(22, 24, 35, 0.12);
+  border-radius: 2px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 1);
+  cursor: pointer;
+  letter-spacing: 0.25px;
 }
 
-.uploadSubmitControls>button:active {
-    background: rgba(235, 235, 235, 0.726);
+.uploadSubmitControls > button:hover {
+  background: rgba(244, 244, 244, 0.726);
 }
 
-.uploadSubmitControls>button:nth-child(1) {
-    margin-right: 3rem;
+.uploadSubmitControls > button:active {
+  background: rgba(235, 235, 235, 0.726);
+}
+
+.uploadSubmitControls > button:nth-child(1) {
+  margin-right: 3rem;
 }
 
 .uploadPreview {
-    height: 458px;
-    width: 260px;
-    border: 2px dashed rgba(22, 24, 35, 0.2);
-    box-sizing: border-box;
+  height: 458px;
+  width: 260px;
+  border: 2px dashed rgba(22, 24, 35, 0.2);
+  box-sizing: border-box;
 }
 
 .uploadPreviewBefore {
-    border-radius: 8px;
-    display: flex;
-    -webkit-box-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    align-items: center;
-    flex-direction: column;
-    cursor: pointer;
-    transition: background 0.15s ease-in-out 0s;
-    padding-left: 35px;
-    padding-right: 35px;
+  border-radius: 8px;
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+  transition: background 0.15s ease-in-out 0s;
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
 .previewTitle {
-    font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
-.previewTitle>h2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 18px;
-    margin: 16px 0 0 0;
+.previewTitle > h2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 18px;
+  margin: 16px 0 0 0;
 }
 
-.previewTitle>h3 {
-    color: rgba(22, 24, 35, 0.5);
-    text-align: center;
-    font-weight: 400;
-    margin-top: 6px;
+.previewTitle > h3 {
+  color: rgba(22, 24, 35, 0.5);
+  text-align: center;
+  font-weight: 400;
+  margin-top: 6px;
 }
 
-.uploadPreview>svg {
-    height: 40px;
-    width: 40px;
+.uploadPreview > svg {
+  height: 40px;
+  width: 40px;
 }
 
 .mediaSelectBtn {
-    margin-top: 1rem;
-    text-decoration: none;
-    font-family: 'Bebas Neue';
-    font-size: 18px;
-    position: relative;
-    height: 44px;
-    color: #fff;
-    background-color: #2ba0ff;
-    width: 164px;
-    padding: 0 16px;
-    border: 1px solid rgba(255, 255, 255, 0.12);
-    border-radius: 2px;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    cursor: pointer;
-    letter-spacing: 0.25px;
+  margin-top: 1rem;
+  text-decoration: none;
+  font-family: "Bebas Neue";
+  font-size: 18px;
+  position: relative;
+  height: 44px;
+  color: #fff;
+  background-color: #2ba0ff;
+  width: 164px;
+  padding: 0 16px;
+  border: 1px solid rgba(255, 255, 255, 0.12);
+  border-radius: 2px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  cursor: pointer;
+  letter-spacing: 0.25px;
 }
 
 .mediaSelectBtn:hover {
-    background-color: #2095f5;
+  background-color: #2095f5;
 }
 
 .mediaSelectBtn:active {
-    background-color: #0f8cf2;
+  background-color: #0f8cf2;
 }
 
 .media {
-    /* height: 100%; */
-    object-fit: contain;
-    width: 100%;
+  /* height: 100%; */
+  object-fit: contain;
+  width: 100%;
 }
 
 .invalid {
-    border: 1px solid rgb(255 0 0 / 30%) !important;
+  border: 1px solid rgb(255 0 0 / 30%) !important;
 }
 
 .loaderContainer {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    background: rgb(201 201 201 / 31%);
-    z-index: 100;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background: rgb(201 201 201 / 31%);
+  z-index: 100;
 }
 
 .loader {
-    width: 48px;
-    height: 48px;
-    border: 5px solid #FFF;
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
 
 @keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
 
-    100% {
-        transform: rotate(360deg);
-    }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 450px) {
+  .uploadContainer {
+    padding: 0;
+  }
+
+  .uploadWrapper {
+    width: 390px;
+  }
+
+  .uploadBodyContainer {
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .uploadMeta {
+    margin-bottom: 1rem;
+  }
+
+  .uploadPreviewWrapper {
+    margin: 0;
+  }
+
+  .uploadPreview {
+    width: auto;
+    height: auto;
+  }
+
+  .uploadPreviewBefore {
+    padding: 24px 56px;
+  }
 }
